--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>william</h1>
-    <h1>name</h1>
+    <h1>nameb</h1>
     <img width="200px" src="download.jfif" alt="">
     <p>profile</p>
 </body>
